--- a/src/App.css
+++ b/src/App.css
@@ -1,17 +1,5 @@
-.App {
+.app {
   text-align: center;
-}
-
-.App-header {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-}
-
-.App-link {
-  color: #61dafb;
 }
 
 .navbar {
