--- a/src/Collection.module.css
+++ b/src/Collection.module.css
@@ -1,4 +1,6 @@
 .collection {
   display: grid;
-  grid-template-columns: repeat(6, 1fr);
+  grid-auto-flow: dense;
+  grid-template-columns: repeat(auto-fill, minmax(10rem, 1fr));
+  gap: 2em;
 }
